<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Localizer3000</string>

    <!-- Location list and details -->
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="ok_text">OK</string>
    <string name="never_again_text">Don\'t show again</string>
    <string name="main_activity_service_status_text">Service status:</string>
    <string name="main_activity_text1">Current coordinates:</string>
    <string name="main_activity_text2">Currently valid location:</string>
    <string name="current_localization">\nUnknown\n</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saved_localizations">Saved locations</string>
    <string name="fragment_location_details_text">Location details</string>
    <string name="fragment_location_details_name">Location name:</string>
    <string name="fragment_location_details_active_days">Active on days:</string>
    <string name="fragment_location_details_active_time">Active time:</string>
    <string name="fragment_location_details_network_location">Network location:</string>
    <string name="fragment_location_details_gps_location">GPS location:</string>
    <string name="fragment_location_details_root">Root:</string>
    <string name="fragment_location_details_gps">GPS:</string>
    <string name="fragment_location_details_sound">Sounds:</string>
    <string name="fragment_location_details_vibrations">Vibrations:</string>
    <string name="fragment_location_details_wifi">Wifi:</string>
    <string name="fragment_location_details_bluetooth">Bluetooth:</string>
    <string name="fragment_location_details_nfc">NFC:</string>
    <string name="fragment_location_details_mobile_data">Mobile Data:</string>
    <string name="fragment_location_details_SMS">SMS:</string>
    <string name="fragment_location_details_turn_off">Turn app off:</string>
    <string name="title_activity_edit_location">Edit location</string>

    <!-- Location edit -->
    <string name="fragment_location_edit_time_from">From: 00:00</string>
    <string name="fragment_location_edit_time_to">To:   23:59</string>
    <string name="edit_location_name_edittext_hint">Enter location name</string>
    <string name="radius_plus_text">+1</string>
    <string name="radius_minus_text">&#8212;1</string>
    <string name="radius_plus_ten_text">+10</string>
    <string name="radius_minus_ten_text">&#8212;10</string>
    <string name="next_text">Next</string>
    <string name="cancel_text">Cancel</string>
    <string name="back_text">Back</string>
    <string name="save_text">Save</string>
    <string name="title_activity_sms">SMS Edition</string>

    <!-- SMS strings -->
    <string name="message_receiver_hint">Receiver number</string>
    <string name="message_text_hint">Enter message text</string>
    <string name="message_location">Send when location: </string>
    <string name="one_time_message_text">Delete sms after sending: </string>

    <!-- Dialog strings -->
    <string name="dialog_modules_main_title">Checkup</string>
    <string name="dialog_modules_main_text">Following functionality is supported by this device:</string>
    <string name="dialog_modules_supported">Supported</string>
    <string name="dialog_modules_unsupported">Unsupported</string>
    
    <!-- Coordinate strings -->
    <string name="coordinates_degrees">Degrees</string>
    <string name="coordinates_minutes">Minutes</string>

    
    <!-- Preferences strings -->
    <string name="preferences_interval_title">Location update interval</string>
    <string name="preferences_modules_title">Check for modules supported</string>
    <string name="preferences_modules_summary">by this device</string>
    <string name="preferences_location_coords_title">Displayed location coordination type</string>
    


</resources>