<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_modules_main_text"
        android:textSize="@dimen/location_details_static_text"
        android:layout_margin="5dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <!-- WiFi, Bluetooth, location availabilities -->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_network_location"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/location_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_gps_location"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/gps_location_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_wifi"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/wifi_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_bluetooth"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/bluetooth_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>
            
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_gps"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/gps_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>  

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_mobile_data"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/mobile_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_vibrations"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/vibrations_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/fragment_location_details_root"
                    android:textSize="@dimen/location_details_static_text" />

                <TextView
                    android:id="@+id/root_availability"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />
            </TableRow>
            
        </TableLayout>
    </ScrollView>
        

    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:gravity="bottom" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/never_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/never_again_text" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok_text" />
    </RelativeLayout>

</LinearLayout>