<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/keys" />

    <RadioGroup
        android:id="@+id/radio_group_list_selector"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="#80000000"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="4dp" >        
        
        <Button
            android:id="@+id/radius_minus_ten_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/radius_minus_ten_text" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/radius_minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/radius_minus_text" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/radius_plus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/radius_plus_text" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/radius_plus_ten_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/radius_plus_ten_text" />
    </RadioGroup>

    <!-- Buttons at the end -->

    <RelativeLayout
        android:id="@+id/keys"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/edit_location_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back_text" />

        <Button
            android:id="@+id/edit_location_save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/ViewColorPickerHelper"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/save_text" />
    </RelativeLayout>

</RelativeLayout>